rnsc/test_data/rns_integration/error/parser/type_hints/double/not_f64_recovers.rns
.class @double "not a double"
unexpected_token ; <- this error should be reported as well
